<resources>
    <string name="app_name">NewsApps</string>
    <string name="aboutus">About Us</string>

    <string name="pref_file_name">SaveAboutUsContent</string>

    <string name="cancelclick">Cancel</string>
    <string name="postnews">Post</string>
    <string name="news">News</string>
    <string name="datepublish">Date Publish:</string>
    <string name="content">Description for news:</string>
    <string name="titlenews">Title:</string>

    <string name="post">Post News</string>

    <string name="publish">Publish Date:</string>

    <string name="date">publishnewsdate</string>
    <string name="goal">Goal >></string>

    <string name="aboutuscontent">School Advisor Application is designed in
mobile application platform. This application
shows the primary and secondary schools
based on education level, and location,
and background of the schools.</string>
    <string name="title1">Background >></string>
    <string name="goalcontent">Our main goal is to assist children to
select their schools easier and according
to their budget. This application also can
let the teachers decrease their workload in
preparing those material for education
fair use.
</string>
    <string name="focus">Focus On >></string>
    <string name="contactus"><![CDATA[Contact Us >>]]></string>

    <string name="contactuscontent">Contact Number: +03-76849391
    \nEmail Address: schooladvisor@gmail.com
    \nWhatsApp: SchAdvisorQues </string>

    <string name="focusoncontent">Our main targeted user will be those
parents because this app will assist parent in searching for secondary school according to their requirement for their children.
</string>
    <string name="empty_not_saved">News unable to post because it is empty.</string>

    <string name="hint_word1">Enter the title ...</string>
    <string name="hint_word2">Enter the description for news ...</string>
    <string name="publishdate">Date</string>
    <string name="datepublished">Date Published:</string>
    <string name="descsummarycontent">description</string>
    <string name="edit">Edit About Us</string>
    <string name="update">Update</string>
    <string name="canceledit">Cancel</string>
    <string name="titlepostnews">Post News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin">Administration Main Page</string>
    <string name="imgnews">Post News/News List</string>
    <string name="imgProfile">Edit Profile</string>
    <string name="imgEvent">Post Event</string>
    <string name="imgUpdate">Update Info</string>
    <string name="imgupload">Upload School Info</string>

</resources>
