<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/parent_layout"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="#FFFEF7C2"
        android:clickable="true"
        android:focusableInTouchMode="false"
        android:foreground="?selectableItemBackground"
        android:padding="16dp">

        <TextView
            android:id="@+id/lbltitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="Title"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!--                android:layout_toRightOf="@+id/imgPic" />-->

        <TextView
            android:id="@+id/datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbltitle"
            android:layout_marginTop="10dp"
            android:text="@string/publish"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbltitle"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/datetime"
            android:text="@string/date"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/lbldescsummary"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/datetime"
            android:layout_marginTop="25dp"
            android:text="@string/descsummarycontent"
            android:textColor="@android:color/black" />

    </RelativeLayout>
</LinearLayout>