<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminMainPage">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lblAdminMainPage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:text="@string/admin"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/recyclerview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/borderlineforimage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblAdminMainPage"
                app:srcCompat="@drawable/userprofile" />

            <ImageView
                android:id="@+id/imgNews"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/borderlineforimage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgUser"
                app:srcCompat="@drawable/news" />

            <ImageView
                android:id="@+id/imgEvent"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/borderlineforimage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgNews"
                app:srcCompat="@drawable/event" />

            <TextView
                android:id="@+id/lblimgNews"
                android:layout_width="82dp"
                android:layout_height="37dp"
                android:text="@string/imgnews"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imgNews"
                app:layout_constraintEnd_toEndOf="@+id/imgNews"
                app:layout_constraintHorizontal_bias="0.038"
                app:layout_constraintStart_toStartOf="@+id/imgNews"
                app:layout_constraintTop_toTopOf="@+id/imgNews"
                app:layout_constraintVertical_bias="0.069" />

            <TextView
                android:id="@+id/lblimgProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imgProfile"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imgUser"
                app:layout_constraintEnd_toEndOf="@+id/imgUser"
                app:layout_constraintHorizontal_bias="0.034"
                app:layout_constraintStart_toStartOf="@+id/imgUser"
                app:layout_constraintTop_toTopOf="@+id/imgUser"
                app:layout_constraintVertical_bias="0.079" />

            <TextView
                android:id="@+id/lblimgEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imgEvent"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imgEvent"
                app:layout_constraintEnd_toEndOf="@+id/imgEvent"
                app:layout_constraintHorizontal_bias="0.034"
                app:layout_constraintStart_toStartOf="@+id/imgEvent"
                app:layout_constraintTop_toTopOf="@+id/imgEvent"
                app:layout_constraintVertical_bias="0.039" />

            <TextView
                android:id="@+id/lblimgupload"
                android:layout_width="95dp"
                android:layout_height="41dp"
                android:text="@string/imgupload"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imgUpload"
                app:layout_constraintEnd_toEndOf="@+id/imgUpload"
                app:layout_constraintHorizontal_bias="0.035"
                app:layout_constraintStart_toStartOf="@+id/imgUpload"
                app:layout_constraintTop_toBottomOf="@+id/imgUpdate"
                app:layout_constraintVertical_bias="0.183" />

            <ImageView
                android:id="@+id/imgUpdate"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/borderlineforimage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgEvent"
                app:srcCompat="@drawable/updateinfo" />

            <TextView
                android:id="@+id/lblimgUpdateInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imgUpdate"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imgUpdate"
                app:layout_constraintEnd_toEndOf="@+id/imgUpdate"
                app:layout_constraintHorizontal_bias="0.034"
                app:layout_constraintStart_toStartOf="@+id/imgUpdate"
                app:layout_constraintTop_toTopOf="@+id/imgUpdate"
                app:layout_constraintVertical_bias="0.089" />

            <ImageView
                android:id="@+id/imgUpload"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/borderlineforimage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgUpdate"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/uploadschool" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>